Added quant methods homework 2 & mod .gitignore to deal w/diff projects

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 .RData
 .Ruserdata
 *.Rproj
-main.log
+*.log
 *.pdf
 *.synctex.gz
-framed.sty
-main-concordance.tex
+*.sty
+*.bbl
+*.blg
+*-concordance.tex
 main.tex
-main.bbl
-main.blg
-data_cleaned.csv
+Homework2.tex
