Added intermediate nccr_tv.tex file & removed _dict files

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ homework3.tex
 homework4.tex
 homework5.tex
 homework6.tex
-*_dict.lexc
+nccfr_tv.tex
 failures.all
 LAFr_verbs.bin
 finite_state_project/*.txt
