Added interview texts for socio project (no permission to share)

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ homework4.tex
 homework5.tex
 homework6.tex
 quant_meths_project/*.tex
-failures.all
-LAFr_verbs.bin
 finite_state_project/*.txt
 finite_state_project/generated_dicts/
+failures.all
+LAFr_verbs.bin
+socio_seminar_project/*.txt
