Added scripts used to compile TeX docs

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ socio_seminar_project/third_person*.tex
 socio_seminar_project/third_person_cleaned.csv
 quant_meths_project/nccfr_tv_cleaned.csv
 socio_intro_the_niche/data_cleaned.csv
+compile*.ps1
