--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ failures.all
 LAFr_verbs.bin
 socio_seminar_project/*.txt
 socio_seminar_project/third_person*.tex
-socio_seminar_project/third_person_cleaned.csv
-quant_meths_project/nccfr_tv_cleaned.csv
+socio_seminar_project/third_person*.csv
+quant_meths_project/nccfr_tv*.csv
 socio_intro_the_niche/data_cleaned.csv
 compile*.ps1
