--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ socio_seminar_project/third_person*.csv
 quant_meths_project/nccfr_tv*.csv
 socio_intro_the_niche/data_cleaned.csv
 compile*.ps1
-phon_phon_project/data/
+phon_phon_project/transcripts/
