Added dir for generated figures in phonphon project

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ quant_meths_project/nccfr_tv*.csv
 socio_intro_the_niche/data_cleaned.csv
 compile*.ps1
 phon_phon_project/transcripts/
+phon_phon_project/figure/
